--- a/getting-started/prerequisites-installation/system-requirements.mdx
+++ b/getting-started/prerequisites-installation/system-requirements.mdx
@@ -1,176 +1,172 @@
 ---
-title: "System Requirements"
-description: "An overview of required compilers, build tools, C++ standards, and supported platforms for GoogleTest and GoogleMock. This page ensures your environment is compatible before you start."
+title: "System Requirements & Prerequisites"
+description: "Outlines the minimum compiler standards, supported operating systems, and required tools for building and using GoogleTest and GoogleMock. Ensures users verify compatibility of their development environment before proceeding."
 ---
 
-# System Requirements
+# System Requirements & Prerequisites
 
-An overview of required compilers, build tools, C++ standards, and supported platforms for GoogleTest and GoogleMock. This page ensures your environment is compatible before you start.
-
----
-
-## 1. Overview
-
-Before setting up GoogleTest and GoogleMock in your development environment, ensure your system meets the necessary requirements. Compatibility and correct versions of compilers, C++ standards, and build tools are essential for a smooth installation and reliable operation.
-
-This guide covers:
-- Supported operating systems and platforms
-- Compatible C++ compiler versions
-- Required C++ language standard
-- Recommended build tools
+Ensure your development environment is prepared before building and using GoogleTest and GoogleMock. This page details the minimum compiler standards, supported operating systems, and required tools for a smooth setup.
 
 ---
 
-## 2. Supported Platforms
+## 1. Minimum Compiler Standards
 
-GoogleTest follows Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support). It supports the major operating systems where C++ development typically occurs.
+GoogleTest requires a compiler that supports **C++17** or later. This is essential for successful compilation and optimal performance.
 
-### Supported Operating Systems
-- **Linux**
-- **Windows** (Desktop editions)
-- **macOS**
+- **C++ Standard**: Use `-std=c++17` or equivalent in your build configuration.
+  - For example, in CMake:
+    ```cmake
+    set(CMAKE_CXX_STANDARD 17)
+    set(CMAKE_CXX_STANDARD_REQUIRED ON)
+    ```
+  - If not using CMake, add compiler flags like `-std=c++17` manually.
 
-For platform-specific details and version compatibility, visit our [Supported Platforms](platforms.md) page.
+- **Supported Compiler Versions**:
+  - **GCC**: Version supporting C++17
+  - **Clang**: Version supporting C++17
+  - **MSVC**: Visual Studio 2015 (14.0) or later for GoogleMock compatibility
 
----
-
-## 3. Compiler Compatibility
-
-GoogleTest requires a C++ compiler with support for at least **C++17**. This is a hard requirement to ensure compatibility with modern C++ features used within GoogleTest and GoogleMock.
-
-### Minimum Compiler Requirements
-- **GCC**: version 7.0 or higher
-- **Clang**: version 5.0 or higher
-- **MSVC (Microsoft Visual Studio)**: 2017 Update 3 or higher
-
-Make sure your compiler is configured to use the C++17 standard or newer.
-
-### How to Verify Your Compiler Version
-Run the following in your terminal or command prompt:
-
-```bash
-# GCC
-gcc --version
-
-# Clang
-clang --version
-
-# MSVC
-cl
-```
-
-Consult your compiler's documentation for how to enable C++17 support. For example, with GCC or Clang, use the flag `-std=c++17` when compiling.
+**Important:**
+- Compilers earlier than these versions will cause build failures or undefined behavior.
 
 ---
 
-## 4. C++ Standard Requirements
+## 2. Supported Operating Systems and Environments
 
-Since GoogleTest is implemented using modern C++ features, your project must be compiled with **C++17** or later.
+GoogleTest is designed to be portable across many platforms. Below is the list of **officially supported** operating systems.
 
-### Enabling C++17
-- **CMake projects:** Set `CMAKE_CXX_STANDARD` to 17 and enforce it by setting `CMAKE_CXX_STANDARD_REQUIRED`.
+| Operating System                  | Notes                                  |
+|---------------------------------|----------------------------------------|
+| Linux (including Android)        | Requires pthread library support       |
+| macOS                           | Full support with Clang or GCC          |
+| Windows Desktop                 | MSVC and MinGW support                   |
+| Cygwin and MinGW                | Supported                               |
+| FreeBSD, NetBSD, OpenBSD, DragonFlyBSD | Supported                       |
+| Solaris, AIX, HP-UX            | Supported with caveats                   |
+| Embedded platforms (ESP8266, ESP32, NRF52) | Limited support, requires tweaks |
 
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
-
-- **Manual compiler flags:** Add `-std=c++17` (GCC/Clang) or the appropriate MSVC flag.
-
-> <Note>
-> Compiling with earlier C++ versions will cause compilation errors or undefined behavior.
-> </Note>
+**Note:** Some embedded or mobile platforms have limitations, including missing file system features or reduced threading support.
 
 ---
 
-## 5. Build Tools
+## 3. Required Tools and Libraries
 
-GoogleTest supports a variety of build systems to accommodate diverse user preferences.
+To build and use GoogleTest and GoogleMock effectively, ensure the following tools and dependencies are installed:
 
-### Commonly Supported Build Tools
-- **CMake** (recommended): Provides cross-platform generation of native build files.
-- **Make**: For Unix-like environments.
-- **Ninja**: Fast build system supported via CMake.
-- **Visual Studio**: On Windows, generated project files are fully supported.
+- **Build System:**
+  - Recommended: [CMake](https://cmake.org/) (version 3.14 or later for FetchContent support).
+  - Alternative build systems supported via custom integration.
 
-### Installing Build Tools
-- **CMake:** Download from [https://cmake.org/install/](https://cmake.org/install/)
-- **Make:** Usually pre-installed on Linux/macOS or available via package managers.
-- **Ninja:** Available via package managers or [https://ninja-build.org/](https://ninja-build.org/)
+- **Compiler:**
+  - Compatible C++17 compiler as noted above.
 
-For detailed instructions on building GoogleTest with CMake, see [Installation on Different Platforms](installation-methods.md).
+- **Threading Library:**
+  - `pthread` library is required on most Unix-like platforms to enable thread safety and parallel testing features.
 
----
-
-## 6. System Dependencies and Features
-
-GoogleTest detects and uses features available in your environment. Some internal features depend on platform support:
-
-| Feature                       | Availability                       |
-|-------------------------------|----------------------------------|
-| Thread Safety (pthreads)       | Linux, macOS, Windows (partial)  |
-| Exception Handling             | Enabled if compiler supports      |
-| File System Access             | Required for various GoogleTest utilities |
-| UTF-16 Wide String Support    | Platform dependent                |
-
-> <Tip>
-> On some embedded or mobile platforms, filesystem or threading support may be limited, which can restrict GoogleTest's full functionality.
-> </Tip>
-
-If you use a build environment that disables exceptions or RTTI, GoogleTest can adapt but some features might be compromised.
+- **Optional:**
+  - For building shared libraries (DLLs), linkers that support shared objects are needed.
 
 ---
 
-## 7. Troubleshooting Compatibility Issues
+## 4. Environment Compatibility Considerations
 
-If you encounter compile or link errors:
+- **Thread Safety:**
+  - GoogleTest is thread-safe if your environment supports pthreads.
+  - For Windows, the native threading model is used.
 
-- Verify your compiler version and C++ standard flag.
-- Ensure that your build tools are up to date and properly configured.
-- On Windows, watch out for mismatched runtime linkage (`static` vs `dynamic` C runtimes). CMake provides the option `gtest_force_shared_crt` to force dynamic linkage.
-- If using custom build scripts, confirm that all necessary compiler flags are passed correctly.
+- **Exception Support:**
+  - Compiler must have exceptions enabled for full feature support.
 
-For help diagnosing build or integration errors, consult the [Troubleshooting Common Setup Issues](common-issues.md) guide.
+- **Runtime Linking on Windows:**
+  - By default, Visual Studio links C runtimes statically for GoogleTest.
+  - Enable dynamic linkage with:
+    ```cmake
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    ```
 
----
-
-## 8. Summary
-
-| Requirement               | Minimum Version / Specification       |
-|---------------------------|-------------------------------------|
-| Operating System          | Linux, Windows Desktop, macOS       |
-| C++ Compiler             | GCC 7+, Clang 5+, MSVC 2017 Update 3|
-| C++ Standard             | C++17 or higher                      |
-| Build Tools              | CMake 3.14+, Make, Ninja, Visual Studio |
-
-Ensure your development environment meets these requirements to build and run GoogleTest and GoogleMock reliably.
+- **Macro Name Conflicts:**
+  - GoogleTest uses macros like `TEST`, `ASSERT_EQ`, which might clash with other libraries.
+  - If conflicts occur, define macros such as `-DGTEST_DONT_DEFINE_TEST=1` and use prefixed macros (`GTEST_TEST`) instead.
 
 ---
 
-## 9. Next Steps
+## 5. Verifying Your Setup
 
-- See [Installation on Different Platforms](installation-methods.md) for detailed build instructions.
-- Refer to the [Quickstart: Building with CMake](quickstart-cmake.md) tutorial to quickly set up and run your first GoogleTest test binary.
-- Review the [GoogleTest Primer](primer.md) to learn core concepts and writing your first tests.
+Before proceeding to installation or test writing, confirm your environment matches these requirements:
 
+1. **C++17 Compiler Check:**
+    ```bash
+    g++ --version
+    clang++ --version
+    cl.exe
+    ```
+    Verify version supports C++17.
+
+2. **CMake Version Check:**
+    ```bash
+    cmake --version
+    ```
+    Version 3.14 or greater is recommended.
+
+3. **pthread Availability:**
+    - On Unix-like systems, `pthread.h` should be available.
+    - You can test with:
+      ```cpp
+      #include <pthread.h>
+      int main() { pthread_t t; return 0; }
+      ```
+
+4. **Operating System Recognition:**
+    - Confirm you are on a supported OS (Linux, Windows Desktop, macOS, etc.).
+
+5. **Network Access (Optional):**
+    - If using CMake's `FetchContent` feature to download GoogleTest sources automatically, verify outbound network access to `github.com`.
+
+---
+
+## Troubleshooting Common Prerequisite Issues
+
+<AccordionGroup title="Troubleshooting Common Setup Issues">
+<Accordion title="Missing or Unsupported Compiler">
+Ensure your compiler supports C++17. If your system default compiler is too old, consider installing a newer version or configuring the build to use an alternative compiler.
+</Accordion>
+<Accordion title="CMake Version Too Low">
+Update CMake to 3.14 or higher to use features like `FetchContent_MakeAvailable()`. Older versions can build GoogleTest but might require manual source downloads.
+</Accordion>
+<Accordion title="Missing pthread Library">
+On Unix-like systems, install development packages that provide pthread, e.g., `libpthread-stubs0-dev` on Debian/Ubuntu.
+</Accordion>
+<Accordion title="Visual Studio Runtime Mismatch on Windows">
+If you encounter linker errors about runtime libraries, enable `gtest_force_shared_crt` in CMake or adjust your Visual Studio project settings to match runtime linkage.
+</Accordion>
+</AccordionGroup>
 
 ---
 
 ## Additional Resources
 
-- [Supported Platforms](platforms.md) — Details on platform and compiler support
-- [GoogleTest Primer](primer.md) — Introduction and basic concepts
-- [Installation on Different Platforms](installation-methods.md) — Detailed installation
-- [Troubleshooting Common Setup Issues](common-issues.md) — Help resolving setup problems
+- [Overview of Supported Platforms](https://github.com/google/googletest/blob/main/docs/platforms.md)
+- [Building GoogleTest with CMake](https://github.com/google/googletest/blob/main/README.md#build-with-cmake)
+- [Integration Guidelines and Best Practices](/overview/architecture-features-integration/integration-ecosystem)
+
 
 ---
 
-<Check>
-Ensure you have a compiler that supports C++17, and verify your build environment matches the recommended system requirements before proceeding with installation.
-</Check>
+## Summary
+
+This page ensures you verify all system requirements and prerequisites before building or integrating GoogleTest and GoogleMock. Confirm the compiler supports C++17, that your OS is supported, and that all necessary tools like CMake and pthread are installed. Addressing these foundational steps will save time and prevent common build and runtime issues.
 
 ---
 
-For the latest updates and deeper integration workflows, visit the [GoogleTest GitHub repository](https://github.com/google/googletest) and refer to the [Architecture & Features Overview](../overview/architecture-features/feature-quick-tour.md) as you progress.
+## Next Steps
+
+Proceed to the [Installing with CMake](/getting-started/prerequisites-installation/installation-cmake) guide to begin building GoogleTest using your prepared environment.
+
 
 ---
+
+*This page fits within the Getting Started > Installation & Environment Setup section, complementing detailed guides on installing and configuring GoogleTest, and it aligns with the broader architecture and integration documentation.*
+
+---
+
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "README.md", "range": "1-150"}, {"path": "docs/platforms.md", "range": "1-20"}, {"path": "docs/primer.md", "range": "1-290"}]}/>
