--- a/getting-started/prerequisites-installation/installation-cmake.mdx
+++ b/getting-started/prerequisites-installation/installation-cmake.mdx
@@ -1,217 +1,143 @@
 ---
-title: "Installation with CMake"
-description: "Step-by-step instructions for installing GoogleTest and GoogleMock using the industry-standard CMake build system. Covers fetching the project, configuring your CMakeLists, and best practices for integrating with your own codebase."
+title: "Installing with CMake"
+description: "Step-by-step instructions for fetching, building, and integrating GoogleTest and GoogleMock using CMake. Guides users through common workflows for adding the framework to new or existing CMake-based projects."
 ---
 
-# Installation with CMake
+# Installing with CMake
 
-This guide walks you through the complete process of installing GoogleTest and GoogleMock using the popular CMake build system. You'll learn how to fetch the source code, configure your project to use GoogleTest and GoogleMock, and follow best practices to integrate them seamlessly into your C++ projects.
+This guide walks you through fetching, building, and integrating GoogleTest and GoogleMock using CMake. Whether you want to build GoogleTest standalone or incorporate it into an existing CMake project, this document provides clear, actionable steps to get started quickly and correctly.
 
 ---
 
 ## 1. Prerequisites & System Requirements
 
-Before proceeding, ensure your environment meets the following requirements:
+Before you begin, ensure your environment meets the following:
 
-- **Operating System:** Linux, macOS, Windows supported.
-- **C++ Compiler:** Must support at least C++17.
-- **CMake Version:** 3.14 or higher is required to support `FetchContent` module.
-- **Build Tools:** Compatible tools like Make, Ninja, or Visual Studio.
-
-If these prerequisites are not met, refer to your platform's installation instructions for CMake and a C++17-compliant compiler.
+- **Operating System**: Linux, macOS, Windows, or other supported platforms.
+- **C++ Compiler**: Must support C++17 standard or later.
+- **CMake**: Version 3.14 or higher.
+- **Build Tools**: Compatible tools such as Make, Ninja, or Visual Studio.
 
 <Check>
-Ensure your compiler supports C++17. For GCC, version 7.0 or later is recommended.
+Make sure CMake is installed by running:
+
+```bash
+cmake --version
+```
+The version output should be 3.14 or later.
 </Check>
 
+For more details on prerequisites, see the [System Requirements & Prerequisites](https://github.com/google/googletest/blob/main/getting-started/prerequisites-installation/system-requirements.md) page.
+
 ---
 
-## 2. Fetching GoogleTest and GoogleMock Source Code
+## 2. Standalone Build with CMake
 
-GoogleTest comes bundled with GoogleMock support by default.
+This approach builds GoogleTest (and GoogleMock by default) as an independent project.
 
-### Clone the Repository
+### Step 1: Clone the Repository
 
-Execute the following in your terminal to clone the source code:
+Run the following commands to clone the official GoogleTest repository and check out a stable release tag:
 
 ```bash
-git clone https://github.com/google/googletest.git -b main
-cd googletest
+git clone https://github.com/google/googletest.git -b v1.17.0
+dcd googletest
 ```
 
-The `main` branch contains the latest stable sources.
+### Step 2: Create a Build Directory
 
-### Directory Overview
-
-- `googletest/` contains GoogleTest sources.
-- GoogleMock is integrated alongside GoogleTest.
-
----
-
-## 3. Configure Your CMakeLists.txt for GoogleTest and GoogleMock
-
-You can integrate GoogleTest & GoogleMock into your project in two primary ways:
-
-### A. Use Pre-Installed or System-Wide Libraries
-
-If GoogleTest/GoogleMock are installed on your system,
-use `find_package()` in your `CMakeLists.txt`:
-
-```cmake
-find_package(GTest REQUIRED)
-# Link against both gtest and gmock libraries
-target_link_libraries(your_target PRIVATE GTest::gtest GTest::gmock)
-```
-
-
-### B. Embed GoogleTest & GoogleMock via `FetchContent`
-
-This is the recommended approach for dependency management.
-
-Add the following snippet to your `CMakeLists.txt` to download and make GoogleTest available at configure time:
-
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/main.zip
-)
-# On Windows, prevent overriding compiler/linker settings of parent project.
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-# Now link with gtest and gmock targets
-add_executable(your_test_target test_main.cpp)
-target_link_libraries(your_test_target PRIVATE gtest gmock)
-```
-
-> Replace `your_test_target` and `test_main.cpp` with your own executable name and test source file.
-
----
-
-## 4. Build GoogleTest and GoogleMock
-
-### Step-by-step Build
-
-From the root of the cloned directory or your project directory containing `CMakeLists.txt`:
+Create a dedicated directory to isolate build files:
 
 ```bash
-mkdir -p build
+mkdir build
 cd build
-cmake ..
-cmake --build .
 ```
 
-- This configures and compiles GoogleTest and GoogleMock.
-- If you want to build only GoogleTest (without GoogleMock), run:
+### Step 3: Generate Build Files with CMake
+
+By default, this generates build scripts for both GoogleTest and GoogleMock:
+
+```bash
+cmake ..
+```
+
+If you prefer to build **only GoogleTest** (without GoogleMock), run:
 
 ```bash
 cmake .. -DBUILD_GMOCK=OFF
-cmake --build .
 ```
 
-### On Unix-like Systems
+### Step 4: Build the Libraries
 
-After build, you can optionally install system-wide (requires admin rights):
+On Linux or macOS, build using Make:
+
+```bash
+make
+```
+
+On Windows, open the generated `gtest.sln` solution file with Visual Studio and build the project.
+
+### Step 5: Install the Libraries
+
+If you have administrator privileges, you can install GoogleTest to your system's default path (`/usr/local` on Unix-like systems):
 
 ```bash
 sudo make install
 ```
 
-or on Windows with CMake generators and Visual Studio, open the generated solution and build.
+### Verification
+
+Confirm the installation by checking header files and libraries at their installed locations:
+
+- Headers: `/usr/local/include/gtest`
+- Libraries: `/usr/local/lib/libgtest.a` or similar
+
+<Note>
+You may need to adjust your compiler and linker flags to find these locations if they are not standard.
+</Note>
 
 ---
 
-## 5. Verifying the Installation
+## 3. Incorporating GoogleTest Into an Existing CMake Project
 
-### Check Installed Libraries
+To seamlessly integrate GoogleTest with your existing CMake project, follow one of these proven patterns.
 
-- GoogleMock installs the following libraries:
-  - `gmock` (mocking framework without main function)
-  - `gmock_main` (mocking framework with a predefined main function)
-- They are usually installed in `/usr/local/lib/` or your chosen prefix.
-- Include files can be found under `include/gtest` and `include/gmock`.
+### Option 1: Use Installed Libraries
 
-### Simple Test Run
-
-Create a sample test `hello_test.cpp`:
-
-```cpp
-#include <gtest/gtest.h>
-
-TEST(HelloTest, BasicAssertions) {
-  EXPECT_STRNE("hello", "world");
-  EXPECT_EQ(7 * 6, 42);
-}
-
-int main(int argc, char **argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
-
-Compile and link with GoogleTest and GoogleMock libraries as shown above, then run the test executable. Expect the test to pass.
-
----
-
-## 6. Best Practices for Integration
-
-- When using GoogleMock:
-  - Link against `gmock_main` to use the included main() that initializes testing.
-  - For more control, link `gmock` + custom main() as needed.
-- Always specify C++17 or higher standard in your `CMakeLists.txt`:
+If GoogleTest is already installed system-wide, import it using `find_package()`:
 
 ```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+find_package(GTest CONFIG REQUIRED)
+
+add_executable(my_tests test/my_test.cpp)
+target_link_libraries(my_tests PRIVATE GTest::gtest_main)
 ```
 
-- Use the `gtest_force_shared_crt` flag on Windows projects to avoid runtime library conflicts.
-- For bigger projects, consider adding `gtest_discover_tests()` for automatic test discovery with CTest:
+This lets you link against prebuilt GoogleTest libraries.
+
+### Option 2: Build GoogleTest as a Subdirectory
+
+For tighter integration and consistent compiler/linker settings, add GoogleTest as a subdirectory within your project.
+
+Steps:
+
+1. Download or clone the GoogleTest source code inside your project tree, e.g. `third_party/googletest`.
+2. Add the following to your `CMakeLists.txt`:
 
 ```cmake
-include(GoogleTest)
-gtest_discover_tests(your_test_target)
+add_subdirectory(third_party/googletest)
+
+add_executable(my_tests test/my_test.cpp)
+target_link_libraries(my_tests PRIVATE gtest_main)
 ```
 
-- To build GoogleMock’s internal tests, set `-Dgmock_build_tests=ON` at configuration.
+This approach builds GoogleTest together with your project using the same toolchain.
 
----
+### Option 3: Fetch GoogleTest Automatically During Configure
 
-## 7. Troubleshooting Common Issues
+Use CMake's `FetchContent` module to download and add GoogleTest at configure time. This is the most flexible and recommended method for continuous integration and frequent updates.
 
-### Common Pitfall: Missing pthreads on MinGW
-
-GoogleTest disables pthreads on MinGW; if you see threading-related build errors, ensure you have proper threading support or disable pthread with `-DGTEST_HAS_PTHREAD=0`.
-
-### Linker Errors on Windows
-
-If you get runtime library mismatch errors (`LNK2038`), set `gtest_force_shared_crt` to ON before fetching content.
-
-### Compiler Standard Not Set
-
-Verify `CMAKE_CXX_STANDARD` is set to 17 or above to avoid compilation failures.
-
-### Build Not Picking Up GoogleMock
-
-Make sure you are linking against `gmock` or `gmock_main` and that these libraries have been properly built and included.
-
----
-
-## 8. Additional Resources
-
-- [GoogleTest Primer](primer.md) to write your first tests.
-- [Mocking for Dummies](gmock_for_dummies.md) for learning mocking basics.
-- [GoogleMock Reference](docs/reference/mocking.md) for detailed mock documentation.
-- [Quickstart with CMake](docs/quickstart-cmake.md) for a full tutorial walkthrough.
-
----
-
-By following this guide, you will have successfully installed and configured GoogleTest and GoogleMock using CMake and be ready to write and run your first C++ tests and mocks.
-
----
-
-## Appendix: Sample Minimal `CMakeLists.txt`
+In your top-level `CMakeLists.txt`, add:
 
 ```cmake
 cmake_minimum_required(VERSION 3.14)
@@ -221,52 +147,180 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(FetchContent)
+
 FetchContent_Declare(
   googletest
-  URL https://github.com/google/googletest/archive/main.zip
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
 )
+
+# For Windows users: match runtime library linkage
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
 FetchContent_MakeAvailable(googletest)
 
-add_executable(hello_test hello_test.cpp)
-# Link against GoogleTest and GoogleMock (includes gtest_main)
-target_link_libraries(hello_test PRIVATE gtest gmock)
+add_executable(my_tests test/my_test.cpp)
+target_link_libraries(my_tests PRIVATE gtest_main)
+```
+
+<Info>
+This requires CMake 3.14 or later due to `FetchContent_MakeAvailable()` usage.
+</Info>
+
+---
+
+## 4. Visual Studio and Runtime Library Considerations
+
+When using Visual Studio, GoogleTest links against static C runtimes by default. This might cause linker errors if your project uses dynamic runtimes.
+
+To fix mismatched runtime linkage errors like:
+
+```
+gtest.lib(gtest-all.obj) : error LNK2038: mismatch detected for 'RuntimeLibrary'
+```
+
+Enable the following CMake option:
+
+```cmake
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+```
+
+This makes GoogleTest link dynamically to the CRT and match your main project settings.
+
+---
+
+## 5. C++ Standard
+
+GoogleTest requires a build environment supporting C++17 or newer.
+
+You can ensure this by specifying in your `CMakeLists.txt`:
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
+
+Alternatively, pass the appropriate flags to CMake during configuration via:
+
+```bash
+cmake -DCMAKE_CXX_FLAGS="-std=c++17" ..
+```
+
+---
+
+## 6. Building and Running Your First Test
+
+Once your project is configured to link against GoogleTest, write a simple test.
+
+Create a source file `hello_test.cc` with:
+
+```cpp
+#include <gtest/gtest.h>
+
+TEST(HelloTest, BasicAssertions) {
+  EXPECT_STRNE("hello", "world");
+  EXPECT_EQ(7 * 6, 42);
+}
+```
+
+Add the following to your `CMakeLists.txt`:
+
+```cmake
+enable_testing()
+
+add_executable(hello_test hello_test.cc)
+target_link_libraries(hello_test PRIVATE gtest_main)
 
 include(GoogleTest)
 gtest_discover_tests(hello_test)
 ```
 
-Replace `hello_test.cpp` with your test source code.
+Build your project:
 
----
-
-## Summary Diagram: Installation and Integration Flow
-
-```mermaid
-flowchart TD
-  A[Start] --> B[Check Prerequisites]
-  B -->|C++17 supported| C[Clone googletest repo]
-  C --> D[Configure with CMake]
-  D --> E{Build Libraries}
-  E -->|Success| F[Link Libraries to Your Project]
-  E -->|Fail| G[Troubleshoot Build]
-  F --> H[Write Test Code]
-  H --> I[Build and Run Tests]
-  I --> J[Tests Pass]
-  J --> K[Integration Complete]
-  G --> D
+```bash
+cmake -S . -B build
+cmake --build build
 ```
 
+Run the tests:
+
+```bash
+cd build
+ctest
+```
+
+You should see output like:
+
+```
+Test project /path/to/build
+Start 1: HelloTest.BasicAssertions
+1/1 Test #1: HelloTest.BasicAssertions ...   Passed    0.00 sec
+
+100% tests passed, 0 tests failed out of 1
+```
+
+Congratulations! Your first GoogleTest test built and ran successfully.
+
 ---
 
+## 7. Troubleshooting Common Issues
+
+<AccordionGroup title="Common Setup Issues">
+<Accordion title="CMake version too low">
+Ensure your CMake version is 3.14 or later, especially when using automatic FetchContent. Older versions will cause errors.
+
+```bash
+cmake --version
+```
+
+Upgrade if necessary from https://cmake.org/install.
+</Accordion>
+<Accordion title="Missing Build Tools">
+Make sure your system has the required build tools:
+- On Linux, install `build-essential` or equivalent.
+- On Windows, have Visual Studio with C++ workload.
+- On macOS, install Xcode Command Line Tools (`xcode-select --install`).
+</Accordion>
+<Accordion title="Runtime mismatches on Visual Studio">
+Enable dynamic CRT linkage to avoid linker errors using:
+
+```cmake
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+```
+</Accordion>
+<Accordion title="Tests not running with ctest">
+Verify that `enable_testing()` and `gtest_discover_tests()` are correctly included in your `CMakeLists.txt`. Without these, tests won't be discovered.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## 8. Next Steps & Further Reading
+
+- Explore writing detailed test cases in the [Writing Your First Test](https://github.com/google/googletest/blob/main/guides/getting-started/writing-your-first-test.md) guide.
+- Learn advanced mocking techniques using GoogleMock in [Writing Your First Mock](https://github.com/google/googletest/blob/main/guides/getting-started/writing-your-first-mock.md).
+- Dive into integrating GoogleTest into complex CI pipelines in the [Continuous Integration & Test Automation](https://github.com/google/googletest/blob/main/guides/integration-and-best-practices/continuous-integration-automation.md) page.
+- Consult the official [CMake Documentation](https://cmake.org/cmake/help/latest/) to master build configuration.
+
+---
+
+## 9. References
+
+- GitHub repository: [https://github.com/google/googletest](https://github.com/google/googletest)
+- Official CMake website: [https://cmake.org/](https://cmake.org/)
+- Quickstart tutorial with practical examples: [Quickstart: Building with CMake](https://github.com/google/googletest/blob/main/docs/quickstart-cmake.md)
+
+---
+
+This completes the step-by-step process to install, build, and run your first test using GoogleTest and CMake.
+
 <Tip>
-Following the `FetchContent` integration approach keeps your project dependencies self-contained and easier to maintain.
+Regularly update your GoogleTest version to benefit from bug fixes and new features by updating the Git tag or commit in your CMake configuration.
 </Tip>
 
 <Note>
-Always confirm correct linking order and matching compiler settings between your code and GoogleTest / GoogleMock builds to avoid subtle runtime issues.
+Make sure your compiler flags and project settings (like runtime linkage and C++ standard) are consistent across your project and GoogleTest to avoid build or runtime issues.
 </Note>
 
 <Warning>
-Avoid manually mixing Debug and Release builds or different runtime libraries between GoogleTest and your project, as this leads to link or runtime errors.
+Avoid mixing debug and release builds between your project and GoogleTest to prevent linking errors or runtime crashes.
 </Warning>
